[package]
name = "pulonia"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
tempfile = "3.23.0"
tklog = "0.3.0"
zip = { version = "0.6", features = ["deflate"] }
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1"
bzip2 = "0.4"
lz4 = "1.24"
sevenz-rust = "0.6"
thiserror = "2.0.17"
sha2 = "0.10.9"
walkdir = "2.5.0"
serde_json = "1.0"
